--- a/style.css
+++ b/style.css
@@ -1,7 +1,56 @@
-img {
-    width:200px;
-    height:200px;
-    margin-left:15px;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family:Arial;
+    padding: 10px;
+    background-color: #f1f1f1;
+}
+
+.header {
+    padding: 30px;
+    text-align: center;
+    background: white;  
+}
+
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: white; 
+    margin-top: 20px;
+}
+
+ul.nav {
+    list-style-type: none; 
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+ul.nav li {
     float: left;
-    
+}
+
+ul.nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding:14px 16px;
+    text-decoration: none;
+}
+
+ul.nav li a:hover:not(.active) {
+    background-color: #111;
+}
+
+ul.nav li a:active {
+    background-color: #04AA6D;
+}
+
+@media screen and (max-width: 600px){
+    ul.nav li{
+        float: left;
+    }
 }
